// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pattern-advanced-editor-field Renders \`pattern-advanced-editor-field\` with custom props 1`] = `
<c-json-field-stub
  label="Advanced editor"
  name="customName"
  readonly="true"
  rows="10"
  validate-on="button"
  value="[object Object]"
>
  <transition-stub
    name="fade-transition"
  >
    <!---->
  </transition-stub>
</c-json-field-stub>
`;

exports[`pattern-advanced-editor-field Renders \`pattern-advanced-editor-field\` with default props 1`] = `
<c-json-field-stub
  label="Advanced editor"
  rows="10"
  validate-on="button"
  value=""
>
  <transition-stub
    name="fade-transition"
  >
    <!---->
  </transition-stub>
</c-json-field-stub>
`;
